--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!DOCTYPE>
-<html>
-    <head>
+---
+layout: default
+title: Architect Theme by Jason Long
+---
 
-    </head>
-    <body>
-        The hardest part of changing is "starting".
-    </body>
-</html>
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
