--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 ---
 layout: default
-title: Pollo Craft
+title: Blue Keys
 ---
 
 <div id="home">
-  <h1>My Works</h1>
+  <h1>This page is not available at the moment.</h1>
+  
+  <!--
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-      <br><h2>Point of Sales(Screenshot)</h2><br>
+      <br><h2>Point of Sales (Screenshot)</h2><br>
         <img src="https://raw.githubusercontent.com/ecgrepollo/ecgrepollo.github.io/master/snips/login.PNG" alt="login" style="width:20%"><br>
     {% endfor %}
   </ul>
+-->
+
 </div>
