--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Blue Keys
 ---
 
 <div id="home">
-  <h1>This page is not available at the moment.</h1>
+  <h1>This page is not available at the moment...</h1>
   
   <!--
   <ul class="posts">
